--- a/templates/template-application-angular/src/main/resources/template-application-angular/api/entity.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/api/entity.js.template
@@ -1,10 +1,10 @@
-var rs = require('http/v4/rs');
-var dao = require('${projectName}/data/dao/${perspectiveName}/${name}');
-var http = require('${projectName}/api/http');
+var rs = require("http/v4/rs");
+var dao = require("${projectName}/data/dao/${perspectiveName}/${name}");
+var http = require("${projectName}/api/http");
 
-#if($type != 'REPORT')
+#if($type != "REPORT")
 rs.service()
-	.resource('')
+	.resource("")
 		.get(function(ctx, request) {
 			var queryOptions = {};
 			var parameters = request.getParameterNames();
@@ -14,35 +14,35 @@ rs.service()
 			var entities = dao.list(queryOptions);
 			http.sendResponseOk(entities);
 		})
-	.resource('count')
+	.resource("count")
 		.get(function(ctx, request) {
 			http.sendResponseOk(dao.count());
 		})
-	.resource('{id}')
+	.resource("{id}")
 		.get(function(ctx) {
 			var id = ctx.pathParameters.id;
 			var entity = dao.get(id);
 			if (entity) {
 			    http.sendResponseOk(entity);
 			} else {
-				http.sendResponseNotFound('${name} not found');
+				http.sendResponseNotFound("${name} not found");
 			}
 		})
-	.resource('')
+	.resource("")
 		.post(function(ctx, request, response) {
 			var entity = request.getJSON();
 			entity.#foreach($property in $properties)#if($property.dataPrimaryKey)${property.name}#end#end = dao.create(entity);
-			response.setHeader('Content-Location', '/services/v3/js/${projectName}/api/${name}.js/' + entity.#foreach($property in $properties)#if($property.dataPrimaryKey)${property.name}#end#end);
+			response.setHeader("Content-Location", "/services/v3/js/${projectName}/api/${name}.js/" + entity.#foreach($property in $properties)#if($property.dataPrimaryKey)${property.name}#end#end);
 			http.sendResponseCreated(entity);
 		})
-	.resource('{id}')
+	.resource("{id}")
 		.put(function(ctx, request) {
 			var entity = request.getJSON();
 			entity.#foreach($property in $properties)#if($property.dataPrimaryKey)${property.name}#end#end = ctx.pathParameters.id;
 			dao.update(entity);
 			http.sendResponseOk(entity);
 		})
-	.resource('{id}')
+	.resource("{id}")
 		.delete(function(ctx) {
 			var id = ctx.pathParameters.id;
 			var entity = dao.get(id);
@@ -50,13 +50,13 @@ rs.service()
 				dao.delete(id);
 				http.sendResponseNoContent();
 			} else {
-				http.sendResponseNotFound('${name} not found');
+				http.sendResponseNotFound("${name} not found");
 			}
 		})
 .execute();
 #else
 rs.service()
-	.resource('')
+	.resource("")
 		.get(function(ctx, request) {
 			var queryOptions = {};
 			var parameters = request.getParameterNames();
