--- a/templates/template-application-angular/src/main/resources/template-application-angular/api/launchpad/menu.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/api/launchpad/menu.js.template
@@ -8,11 +8,11 @@
  * SAP - initial API and implementation
  */
 
-var extensions = require('core/v4/extensions');
-var request = require('http/v4/request');
-var response = require('http/v4/response');
+var extensions = require("core/v4/extensions");
+var request = require("http/v4/request");
+var response = require("http/v4/response");
 
-var extensionPoint = request.getParameter('extensionPoint');
+var extensionPoint = request.getParameter("extensionPoint");
 var mainmenu = [];
 
 var menuExtensions = extensions.getExtensions(extensionPoint);
