--- a/templates/template-application-angular/src/main/resources/template-application-angular/api/launchpad/perspectives.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/api/launchpad/perspectives.js.template
@@ -8,14 +8,14 @@
  * SAP - initial API and implementation
  */
 
-var extensions = require('core/v4/extensions');
-var request = require('http/v4/request');
-var response = require('http/v4/response');
+var extensions = require("core/v4/extensions");
+var request = require("http/v4/request");
+var response = require("http/v4/response");
 
 var perspectives = [];
 
-var relativePath = getRelativePath(request.getParameter('pathSegments'));
-var perspectiveExtensions = extensions.getExtensions('launchpad-{{extensionName}}-perspective');
+var relativePath = getRelativePath(request.getParameter("pathSegments"));
+var perspectiveExtensions = extensions.getExtensions("launchpad-{{extensionName}}-perspective");
 for (var i = 0; perspectiveExtensions !== null && i < perspectiveExtensions.length; i++) {
     var perspectiveExtension = require(perspectiveExtensions[i]);
     var perspective = perspectiveExtension.getPerspective(relativePath);
@@ -40,9 +40,9 @@ function isPerspectiveAdded(perspectives, perspective) {
 }
 
 function getRelativePath(pathSegments) {
-	var relativePath = '/';
+	var relativePath = "/";
 	for (var i = 0; i < pathSegments; i ++) {
-		relativePath += '../';
+		relativePath += "../";
 	}
 	return relativePath;
 }
