--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/extensions/perspective.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/extensions/perspective.js.template
@@ -10,9 +10,9 @@
 
 exports.getPerspective = function(relativePath) {
 	return {
-		'name': 'Home',
-		'image': 'home',
-		'link': relativePath + 'services/v3/web/{{projectName}}/index.html',
-		'order': 0
+		name: "Home",
+		image: "home",
+		link: relativePath + "services/v3/web/{{projectName}}/index.html",
+		order: 0
 	};
 };
