--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/extensions/tile/tile.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/extensions/tile/tile.js.template
@@ -8,35 +8,35 @@
  * SAP - initial API and implementation
  */
 
-var dao = require('${projectName}/data/dao/${perspectiveName}/${name}.js')
+var dao = require("${projectName}/data/dao/${perspectiveName}/${name}.js")
 
 exports.getTile = function(relativePath) {
 	return {
 #if($title)
-		'name': '${title}',
+		name: "${title}",
 #elseif($perspectiveName)
-		'name': '${perspectiveName}',
+		name: "${perspectiveName}",
 #else
-		'name': '${projectName}',
+		name: "${projectName}",
 #end
 #if(${perspectiveName})
-		'group': '${perspectiveName}',
+		group: "${perspectiveName}",
 #else
-		'group': '${projectName}',
+		group: "${projectName}",
 #end
 #if($icon)
-		'icon': '${icon}',
+		icon: "${icon}",
 #elseif($perspectiveIcon)
-		'icon': '${perspectiveIcon}',
+		icon: "${perspectiveIcon}",
 #else
-		'icon': 'life-ring',
+		icon: "life-ring",
  #end
-		'location': relativePath + 'services/v3/web/${projectName}/ui/${perspectiveName}/index.html',
-		'count': dao.customDataCount(),
+		location: relativePath + "services/v3/web/${projectName}/ui/${perspectiveName}/index.html",
+		count: dao.customDataCount(),
 #if($perspectiveOrder)
-		'order': '${perspectiveOrder}'
+		order: "${perspectiveOrder}"
 #else
-		'order': 999
+		order: 999
 #end
 	};
 };
