--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/report/bar/extensions/menu/item.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/report/bar/extensions/menu/item.js.template
@@ -10,9 +10,9 @@
 
 exports.getMenu = function() {
 	return {
-		'id': '{{name}}',
-		'name': '{{name}}',
-		'link': '#',
-		'order': 800
+		id: "{{name}}",
+		name: "{{name}}",
+		link: "#",
+		order: 800
 	};
 };
