--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/report/line/extensions/view.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/report/line/extensions/view.js.template
@@ -10,11 +10,11 @@
 
 exports.getView = function(relativePath) {
 	return {
-		'id': '{{name}}',
-		'name': '{{menuLabel}}',
-		'label': '{{menuLabel}}',
-		'factory': 'frame',
-		// 'region': 'center-bottom',
-		'link': relativePath + 'services/v3/web/{{projectName}}/ui/{{perspectiveName}}/views/{{name}}/index.html'
+		id: "{{name}}",
+		name: "{{menuLabel}}",
+		label: "{{menuLabel}}",
+		factory: "frame",
+		// region: "center-bottom",
+		link: relativePath + "services/v3/web/{{projectName}}/ui/{{perspectiveName}}/views/{{name}}/index.html"
 	};
 };
