--- a/modules/database/database-data-models/pom.xml
+++ b/modules/database/database-data-models/pom.xml
@@ -40,8 +40,8 @@
 			<version>3.5.0-SNAPSHOT</version>
     	</dependency>
     	<dependency>
-		    <groupId>javax.persistence</groupId>
-		    <artifactId>persistence-api</artifactId>
+		    <groupId>org.eclipse.persistence</groupId>
+		    <artifactId>jakarta.persistence</artifactId>
 		    <version>${persistence.api.version}</version>
 		</dependency>
 		<dependency>
