--- a/modules/database/database-persistence/pom.xml
+++ b/modules/database/database-persistence/pom.xml
@@ -29,9 +29,9 @@
 			<version>3.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>persistence-api</artifactId>
-			<version>1.0</version>
+		    <groupId>org.eclipse.persistence</groupId>
+		    <artifactId>jakarta.persistence</artifactId>
+		    <version>${persistence.api.version}</version>
 		</dependency>
 
 		<!-- Test dependencies -->
