--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/master/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/master/index.html.template
@@ -17,7 +17,7 @@
 		<h1>Manage ${menuLabel}</h1>
 	</div>
 	<div class="container">
-		<button type="button" ng-click="openNewDialog()" class="btn btn-lg btn-primary pull-right">New</button>
+		<button type="button" ng-click="openNewDialog()" class="btn btn-lg btn-primary pull-right table-header-button">New</button>
 		<table class="table product-table">
 			<thead>
 				<tr>
@@ -139,14 +139,14 @@
 	    <ul class="pagination">
 	        <li class="page-item" ng-click="previousPage()" ng-class="{disabled: dataPage == 1}">
 	            <a class="page-link" href="#" aria-label="Previous">
-	                <span aria-hidden="true">&laquo;</span>
+	                <span aria-hidden="true"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
 	                <span class="sr-only">Previous</span>
 	            </a>
 	        </li>
 	        <li class="page-item" ng-repeat="next in getPages() track by $index" ng-click="loadPage($index + 1)" ng-class="{active: $index + 1 == dataPage}"><a class="page-link" href="#">{{$index + 1}}</a></li>
 	        <li class="page-item" ng-click="nextPage()" ng-class="{disabled: dataPage == dataPages}">
 	            <a class="page-link" href="#" aria-label="Next">
-	                <span aria-hidden="true">&raquo;</span>
+	                <span aria-hidden="true"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
 	                <span class="sr-only">Next</span>
 	            </a>
 	        </li>
