--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/resources/templates/tiles.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/resources/templates/tiles.html.template
@@ -10,16 +10,16 @@
 							<div class="col-xs-3">
 								<i class="fa fa-{{next.icon}} fa-4x"></i>
 							</div>
-							<div class="col-xs-9 text-right">
-								<div class="huge">{{next.count}}</div>
-								<div>{{next.name}}</div>
+							<div class="ng-binding col-xs-8">{{next.name}}</div>
+							<div class="huge ng-binding col-xs-1">
+							    <span class="badge badge-pill badge-light">{{next.count}}</span>
 							</div>
 						</div>
 					</div>
 					<a href="{{next.location}}">
 						<div class="panel-footer">
 							<span class="pull-left">Open {{next.name}}</span>
-							<span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+							<span class="pull-right"><i class="fa fa-chevron-right"></i></span>
 							<div class="clearfix"></div>
 						</div>
 					</a>
