--- a/templates/template-application-launchpad/src/main/resources/template-application-launchpad/index.html.template
+++ b/templates/template-application-launchpad/src/main/resources/template-application-launchpad/index.html.template
@@ -60,7 +60,7 @@
 <div tiles></div>
  
 <br><br><br>
-<p style="font-size: 1.2em">{{description}}</p>
+<p class="container launchpad-description">{{description}}</p>
            
 </div>
            
