--- a/templates/template-application-launchpad/src/main/resources/template-application-launchpad/resources/templates/menu.html.template
+++ b/templates/template-application-launchpad/src/main/resources/template-application-launchpad/resources/templates/menu.html.template
@@ -38,8 +38,8 @@
 			  <li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Themes <b class="caret"></b></a>
 				<ul class="dropdown-menu">
-					<li><a href="#" data-theme="florence" class="theme-link" ng-click="selectTheme('florence')">Florence</a></li>
-					<li><a href="#" data-theme="alice" class="theme-link" ng-click="selectTheme('alice')">Alice</a></li>
+					<li><a href="#" data-theme="default" class="theme-link" ng-click="selectTheme('default')">Default</a></li>
+					<li><a href="#" data-theme="fiori" class="theme-link" ng-click="selectTheme('fiori')">Fiori</a></li>
 				</ul>
 			  </li>				  
 			  <li class="hidden-xs">
