SAP distro fixed

--- a/api/api-facade/api-core/pom.xml
+++ b/api/api-facade/api-core/pom.xml
@@ -43,6 +43,7 @@
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-repository-local</artifactId>
             <version>4.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
