--- a/modules/core/core-git/pom.xml
+++ b/modules/core/core-git/pom.xml
@@ -47,7 +47,7 @@
     	<dependency>
 		    <groupId>org.eclipse.jgit</groupId>
 		    <artifactId>org.eclipse.jgit</artifactId>
-		    <version>4.8.0.201706111038-r</version>
+		    <version>${jgit.version}</version>
 		</dependency>
 
 		<dependency>
