--- a/pom.xml
+++ b/pom.xml
@@ -492,7 +492,7 @@
 		<maven.clean.plugin.version>3.0.0</maven.clean.plugin.version>
 		<maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
 		<maven.scm.plugin.version>1.9</maven.scm.plugin.version>
-		<commons.io>2.5</commons.io>
+		<commons.io>2.6</commons.io>
 		<commons.codec>1.10</commons.codec>
 		<cxf.version>3.1.11</cxf.version>
 		<gson.version>2.2.4</gson.version>
@@ -517,6 +517,7 @@
 		<jaxws.version>2.3.0</jaxws.version>
 		<license-maven-plugin.version>3.0</license-maven-plugin.version>
 		<persistence.api.version>2.2.2</persistence.api.version>
+		<jgit.version>5.5.0.201909110433-r</jgit.version>
 
 		<skip.tests>true</skip.tests>
 	</properties>
