--- a/releng/server-all/Dockerfile-base
+++ b/releng/server-all/Dockerfile-base
@@ -10,3 +10,4 @@ RUN rm $CATALINA_HOME/webapps/ROOT.war
 RUN rm /usr/local/tomcat/conf/tomcat-users.xml
 RUN wget http://www.dirigible.io/help/conf/tomcat-users.xml -P /usr/local/tomcat/conf/
 RUN wget https://jdbc.postgresql.org/download/postgresql-42.1.4.jar -P /usr/local/tomcat/lib/
+RUN wget https://repo1.maven.org/maven2/com/sap/cloud/db/jdbc/ngdbc/2.4.63/ngdbc-2.4.63.jar -P /usr/local/tomcat/lib/
