--- a/templates/template-database-table/pom.xml
+++ b/templates/template-database-table/pom.xml
@@ -20,7 +20,7 @@
 	</scm>
 	
 	<properties>
-		<content.repository.name>template-v3-database-table</content.repository.name>
+		<content.repository.name>template-database-table</content.repository.name>
 		<content.project.name>template-database-table</content.project.name>
 
 		<content.scm.url>https://github.com/dirigiblelabs/${content.repository.name}</content.scm.url>
