--- a/templates/template-job/pom.xml
+++ b/templates/template-job/pom.xml
@@ -20,7 +20,7 @@
 	</scm>
 
 	<properties>
-		<content.repository.name>template-v3-job</content.repository.name>
+		<content.repository.name>template-job</content.repository.name>
 		<content.project.name>template-job</content.project.name>
 
 		<content.scm.url>https://github.com/dirigiblelabs/${content.repository.name}</content.scm.url>
