--- a/api/api-facade/api-tests/pom.xml
+++ b/api/api-facade/api-tests/pom.xml
@@ -110,6 +110,11 @@
             <artifactId>dirigible-core-indexing</artifactId>
             <version>4.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-facade-workspace</artifactId>
+            <version>4.0.0-SNAPSHOT</version>
+        </dependency>
         
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
@@ -154,6 +159,11 @@
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-api-javascript-cms</artifactId>
+            <version>4.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-javascript-workspace</artifactId>
             <version>4.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
