Fixed: #463 - Database based CMIS Repository

--- a/modules/cms/pom.xml
+++ b/modules/cms/pom.xml
@@ -18,6 +18,7 @@
 		<module>cms-api</module>
         <module>cms-internal</module>
 		<module>cms-managed</module>
+		<module>cms-database</module>
 	</modules>
 
 </project>
