--- a/releng/sap-all/pom.xml
+++ b/releng/sap-all/pom.xml
@@ -125,6 +125,11 @@
 		 	<artifactId>dirigible-cms-managed</artifactId>
 		 	<version>4.0.0-SNAPSHOT</version>
 		</dependency>
+		<!-- <dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-cms-database</artifactId>
+		 	<version>4.0.0-SNAPSHOT</version>
+		</dependency> -->
 		
 		<!-- BPM -->
 		<dependency>
