Fix #465 [Releng] SAP - Managed destination provider is not used by default

--- a/releng/sap-all/src/main/resources/dirigible.properties
+++ b/releng/sap-all/src/main/resources/dirigible.properties
@@ -21,3 +21,4 @@ DIRIGIBLE_CMS_PROVIDER=managed
 DIRIGIBLE_BPM_PROVIDER=internal
 DIRIGIBLE_FLOWABLE_USE_DEFAULT_DATABASE=false
 DIRIGIBLE_MESSAGING_USE_DEFAULT_DATABASE=false
+DIRIGIBLE_DESTINATIONS_PROVIDER=managed
