--- a/releng/sap-cms/src/main/resources/dirigible.properties
+++ b/releng/sap-cms/src/main/resources/dirigible.properties
@@ -20,4 +20,5 @@ DIRIGIBLE_DATABASE_DATASOURCE_NAME_DEFAULT=DefaultDB
 DIRIGIBLE_CMS_PROVIDER=managed
 DIRIGIBLE_BPM_PROVIDER=internal
 DIRIGIBLE_HOME_URL=services/v4/web/ide-documents/
+DIRIGIBLE_DESTINATIONS_PROVIDER=managed
 
