OData provisioning based on the work by Mitko Kolev and others

--- a/modules/engines/pom.xml
+++ b/modules/engines/pom.xml
@@ -27,6 +27,7 @@
 		<module>engine-web</module>
 		<module>engine-wiki</module>
 		<module>engine-command</module>
+		<module>engine-odata</module>
 	</modules>
 
 </project>
