--- a/modules/engines/engine-all/pom.xml
+++ b/modules/engines/engine-all/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>dirigible-engine-command</artifactId>
             <version>4.1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-engine-odata</artifactId>
+            <version>4.1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
