Fix#483 [Releng] SAP All Ephemeral Build

--- a/pom.xml
+++ b/pom.xml
@@ -548,6 +548,7 @@
 		<module>releng/desktop-all</module>
 		<module>releng/openshift-all</module>
 		<module>releng/sap-all</module>
+		<module>releng/sap-all-ephemeral</module>
 		<module>releng/sap-cms</module>
 		<module>releng/server-all</module>
 		<module>releng/server-keycloak-all</module>
