--- a/modules/core/core-scheduler/src/main/resources/quartz.properties
+++ b/modules/core/core-scheduler/src/main/resources/quartz.properties
@@ -29,7 +29,7 @@ org.quartz.threadPool.threadPriority=5
 
 org.quartz.jobStore.misfireThreshold=60000
 
-org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+org.quartz.jobStore.class=org.eclipse.dirigible.core.scheduler.quartz.CustomJobStore
 org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
 org.quartz.jobStore.useProperties=false
 org.quartz.jobStore.dataSource=DefaultDB
