Fixed: #497 - Internal Jobs to be Configurable

--- a/releng/sap-all/src/main/resources/dirigible.properties
+++ b/releng/sap-all/src/main/resources/dirigible.properties
@@ -22,3 +22,12 @@ DIRIGIBLE_BPM_PROVIDER=internal
 DIRIGIBLE_FLOWABLE_USE_DEFAULT_DATABASE=false
 DIRIGIBLE_MESSAGING_USE_DEFAULT_DATABASE=false
 DIRIGIBLE_DESTINATIONS_PROVIDER=managed
+DIRIGIBLE_JOB_EXPRESSION_BPM=0/50 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_DATA_STRUCTURES=0/30 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_EXTENSIONS=0/20 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_JOBS=0/30 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_MESSAGING=0/20 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_MIGRATIONS=0/60 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_ODATA=0/45 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_PUBLISHER=0/20 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_SECURITY=0/15 * * * * ?
