--- a/releng/sap-cms/src/main/resources/dirigible.properties
+++ b/releng/sap-cms/src/main/resources/dirigible.properties
@@ -21,4 +21,12 @@ DIRIGIBLE_CMS_PROVIDER=managed
 DIRIGIBLE_BPM_PROVIDER=internal
 DIRIGIBLE_HOME_URL=services/v4/web/ide-documents/
 DIRIGIBLE_DESTINATIONS_PROVIDER=managed
+DIRIGIBLE_JOB_EXPRESSION_DATA_STRUCTURES=0/30 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_EXTENSIONS=0/20 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_JOBS=0/30 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_MESSAGING=0/20 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_MIGRATIONS=0/60 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_ODATA=0/45 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_PUBLISHER=0/20 * * * * ?
+DIRIGIBLE_JOB_EXPRESSION_SECURITY=0/15 * * * * ?
 
