--- a/releng/Dockerfile-tomcat
+++ b/releng/Dockerfile-tomcat
@@ -5,9 +5,12 @@ FROM tomcat:8.5.43-jdk11-openjdk
  
 RUN rm -R /usr/local/tomcat/webapps/*
 COPY server-all/target/ROOT.war $CATALINA_HOME/webapps/
+
 RUN rm /usr/local/tomcat/conf/tomcat-users.xml
 RUN wget http://www.dirigible.io/help/conf/tomcat-users.xml -P /usr/local/tomcat/conf/
-RUN wget https://jdbc.postgresql.org/download/postgresql-42.1.4.jar -P /usr/local/tomcat/lib/
+
+RUN wget https://repo1.maven.org/maven2/org/postgresql/postgresql/42.1.4/postgresql-42.1.4.jar -P /usr/local/tomcat/lib/
+RUN wget https://repo1.maven.org/maven2/com/sap/cloud/db/jdbc/ngdbc/2.4.63/ngdbc-2.4.63.jar -P /usr/local/tomcat/lib/
  
 EXPOSE 8080
 CMD ["catalina.sh", "run"]
