--- a/releng/anonymous-runtime/Dockerfile-base
+++ b/releng/anonymous-runtime/Dockerfile-base
@@ -8,4 +8,5 @@ COPY target/ROOT.war $CATALINA_HOME/webapps/
 RUN unzip $CATALINA_HOME/webapps/ROOT.war -d $CATALINA_HOME/webapps/ROOT
 RUN rm $CATALINA_HOME/webapps/ROOT.war
 
-RUN wget https://jdbc.postgresql.org/download/postgresql-42.1.4.jar -P /usr/local/tomcat/lib/
+RUN wget https://repo1.maven.org/maven2/org/postgresql/postgresql/42.1.4/postgresql-42.1.4.jar -P /usr/local/tomcat/lib/
+RUN wget https://repo1.maven.org/maven2/com/sap/cloud/db/jdbc/ngdbc/2.4.63/ngdbc-2.4.63.jar -P /usr/local/tomcat/lib/
