--- a/releng/server-runtime-keycloak/Dockerfile-base
+++ b/releng/server-runtime-keycloak/Dockerfile-base
@@ -4,9 +4,11 @@
 ARG DIRIGIBLE_VERSION=latest
 FROM dirigiblelabs/dirigible-base-platform-runtime:$DIRIGIBLE_VERSION
 
-RUN curl https://downloads.jboss.org/keycloak/4.0.0.Beta3/adapters/keycloak-oidc/keycloak-tomcat8-adapter-dist-4.0.0.Beta3.zip --create-dirs -o /usr/local/tomcat/lib/keycloak-tomcat8-adapter-dist.zip
+RUN curl https://repo1.maven.org/maven2/org/keycloak/keycloak-tomcat8-adapter-dist/4.0.0.Beta3/keycloak-tomcat8-adapter-dist-4.0.0.Beta3.zip --create-dirs -o /usr/local/tomcat/lib/keycloak-tomcat8-adapter-dist.zip
 RUN cd /usr/local/tomcat/lib && unzip keycloak-tomcat8-adapter-dist.zip
-RUN wget https://jdbc.postgresql.org/download/postgresql-42.1.4.jar -P /usr/local/tomcat/lib/
 COPY src/main/webapp/META-INF/context.xml /usr/local/tomcat/webapps/ROOT/META-INF/
 COPY src/main/webapp/WEB-INF/keycloak.json /usr/local/tomcat/webapps/ROOT/WEB-INF/
 COPY src/main/webapp/WEB-INF/keycloak.json /usr/local/tomcat/webapps/ROOT/WEB-INF/
+
+RUN wget https://repo1.maven.org/maven2/org/postgresql/postgresql/42.1.4/postgresql-42.1.4.jar -P /usr/local/tomcat/lib/
+RUN wget https://repo1.maven.org/maven2/com/sap/cloud/db/jdbc/ngdbc/2.4.63/ngdbc-2.4.63.jar -P /usr/local/tomcat/lib/
