Fix #507 [API] Template Engine

--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -16,6 +16,9 @@
 	<modules>
 		<module>core-all</module>
 		<module>core-extensions</module>
+		<module>core-generation</module>
+		<module>core-generation-mustache</module>
+		<module>core-generation-velocity</module>
         <module>core-git</module>
 		<module>core-indexing</module>
 		<module>core-messaging</module>
