--- a/ide/services/ide-generation/pom.xml
+++ b/ide/services/ide-generation/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>dirigible-engine-javascript</artifactId>
             <version>4.3.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-generation</artifactId>
+            <version>4.3.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
