[Releng] Trial Setup to use local database connection

--- a/releng/trial-all/src/main/resources/dirigible.properties
+++ b/releng/trial-all/src/main/resources/dirigible.properties
@@ -13,4 +13,5 @@ DIRIGIBLE_PRODUCT_NAME=${project.title}
 DIRIGIBLE_PRODUCT_VERSION=${project.version}
 DIRIGIBLE_PRODUCT_TYPE=all
 DIRIGIBLE_INSTANCE_NAME=trial
+DIRIGIBLE_DATABASE_PROVIDER=local
 
