--- a/releng/openshift-all/pom.xml
+++ b/releng/openshift-all/pom.xml
@@ -198,4 +198,7 @@
 		</dependency>
 	</dependencies>
 
+	<properties>
+		<license.header.lication>../../license-header.txt</license.header.lication>
+	</properties>
 </project>
