--- a/releng/sap-all-ephemeral/pom.xml
+++ b/releng/sap-all-ephemeral/pom.xml
@@ -180,4 +180,8 @@
 			<version>${jetty.version}</version>
 		</dependency>
 	</dependencies>
+
+	<properties>
+		<license.header.lication>../../license-header.txt</license.header.lication>
+	</properties>
 </project>
