--- a/releng/server-all/pom.xml
+++ b/releng/server-all/pom.xml
@@ -195,4 +195,8 @@
 			<version>${jetty.version}</version>
 		</dependency>
 	</dependencies>
+
+	<properties>
+		<license.header.lication>../../license-header.txt</license.header.lication>
+	</properties>
 </project>
