--- a/releng/server-database/pom.xml
+++ b/releng/server-database/pom.xml
@@ -243,5 +243,8 @@
 			<version>${jetty.version}</version>
 		</dependency>
 	</dependencies>
-	
+
+	<properties>
+		<license.header.lication>../../license-header.txt</license.header.lication>
+	</properties>
 </project>
