--- a/releng/server-javascript/pom.xml
+++ b/releng/server-javascript/pom.xml
@@ -179,5 +179,8 @@
 			<version>${jetty.version}</version>
 		</dependency>
 	</dependencies>
-	
+
+	<properties>
+		<license.header.lication>../../license-header.txt</license.header.lication>
+	</properties>
 </project>
