--- a/releng/server-runtime/pom.xml
+++ b/releng/server-runtime/pom.xml
@@ -174,4 +174,8 @@
 			<version>${jetty.version}</version>
 		</dependency>
 	</dependencies>
+
+	<properties>
+		<license.header.lication>../../license-header.txt</license.header.lication>
+	</properties>
 </project>
