--- a/releng/sap-cms/src/main/webapp/WEB-INF/web.xml
+++ b/releng/sap-cms/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2010-2019 SAP and others.
+    Copyright (c) 2010-2020 SAP and others.
     All rights reserved. This program and the accompanying materials
     are made available under the terms of the Eclipse Public License v1.0
     which accompanies this distribution, and is available at
@@ -40,6 +40,10 @@
 		<init-param>
 		    <param-name>jaxrs.features</param-name>
             <param-value>org.apache.cxf.jaxrs.swagger.Swagger2Feature</param-value>
+        </init-param>
+        <init-param>
+		    <param-name>service-list-path</param-name>
+            <param-value>/jax-rs</param-value>
         </init-param>
 		 
 		<load-on-startup>1</load-on-startup>
