--- a/modules/core/core-all/pom.xml
+++ b/modules/core/core-all/pom.xml
@@ -52,6 +52,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-generation-javascript</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-core-git</artifactId>
             <version>4.4.0</version>
         </dependency>
